force-app/main/default/objects/Program_Outreach__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Program Outreaches</relationshipLabel>
        <relationshipName>Program_Outreaches</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The owner of the Program Outreach. This field is not required which allows reportability of unowned versus owned Program outreaches.</description>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Program_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Awareness__c</fullName>
        <inlineHelpText>Is the Account aware or unaware of the Program?</inlineHelpText>
        <label>Awareness</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aware</fullName>
                </value>
                <value>
                    <fullName>Not Aware</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bad_Incorrect_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bad/Incorrect Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cloned_to_New_Outreach__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cloned to New Outreach</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed_Date_Time__c</fullName>
        <label>Closed Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Program Outreaches</relationshipLabel>
        <relationshipName>Program_Outreaches</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Do_Not_Call_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Call Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Status__c</fullName>
        <label>Email Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Not Sent</fullName>
                </value>
                <value>
                    <fullName>Not Sent-Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Escalated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escalated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Escalation_Comments__c</fullName>
        <inlineHelpText>If the outreach should be escalated, please include details as to why.</inlineHelpText>
        <label>Escalation Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Progress_Date_Time__c</fullName>
        <label>In Progress Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Indexed_Language__c</fullName>
        <externalId>true</externalId>
        <label>Indexed Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indexed_Region__c</fullName>
        <externalId>true</externalId>
        <label>Indexed Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Langauge</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minutes_In_Progress__c</fullName>
        <formula>IF(
ISBLANK(Closed_Date_Time__c),
( NOW() - In_Progress_Date_Time__c)*24*60,
(Closed_Date_Time__c - In_Progress_Date_Time__c)*24*60
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minutes In Progress</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Longer_With_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If the Outreach is no longer with the company, this box should be checked.</inlineHelpText>
        <label>No Longer With Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Program Outreaches</relationshipLabel>
        <relationshipName>Program_Outreaches</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AMER</fullName>
                    <default>true</default>
                    <label>AMER</label>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sentiment__c</fullName>
        <inlineHelpText>Please rate the Outreach&apos;s sentiment based on your interaction.</inlineHelpText>
        <label>Sentiment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Reason__c</fullName>
        <inlineHelpText>Select Connected if you were able to speak with the intended Outreach.</inlineHelpText>
        <label>Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Connected</fullName>
                </value>
                <value>
                    <fullName>Connected Elsewhere</fullName>
                </value>
                <value>
                    <fullName>Unconnected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Paused</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unconnected_Reason__c</fullName>
        <inlineHelpText>Select the reason that best fits why the connection was not possible.</inlineHelpText>
        <label>Unconnected Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status_Reason__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reached Voicemail</fullName>
                </value>
                <value>
                    <fullName>Bad/Incorrect Phone</fullName>
                </value>
                <value>
                    <fullName>Hung Up</fullName>
                </value>
                <value>
                    <fullName>Incorrect Contact</fullName>
                </value>
                <value>
                    <fullName>Contact Not Interested</fullName>
                </value>
                <value>
                    <fullName>Contact No Longer With Company</fullName>
                </value>
                <value>
                    <fullName>Contact Not Available Due to IVR (Interactive Voice Response)</fullName>
                </value>
                <value>
                    <fullName>Unable To Leave Voicemail / Voicemail Full</fullName>
                </value>
                <value>
                    <fullName>Gate Keeper (Assistant / Receptionist) Answered and could not connect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Program Outreach</label>
    <nameField>
        <displayFormat>PO-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Outreaches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>