force-app/main/default/objects/Program_Outreach__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <defaultValue>&quot;AUTOFILLED FROM CONTACT&quot;</defaultValue>
    <label>Email</label>
    <type>Email</type>
</CustomField>