force-app/main/default/objects/Program_Outreach__c/fields/Is_Test__c.field-meta.xml
<CustomField>
    <fullName>Is_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box for outreaches used for testing and training purposes.</description>
    <inlineHelpText>Check this box for outreaches used for testing and training purposes.</inlineHelpText>
    <label>Is Test</label>
    <type>Checkbox</type>
</CustomField>