force-app/main/default/objects/Program_Outreach__c/validationRules/First_Name_Cannot_Be_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name_Cannot_Be_Empty</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISNULL(First_Name__c),ISBLANK(First_Name__c))</errorConditionFormula>
    <errorDisplayField>First_Name__c</errorDisplayField>
    <errorMessage>First Name Cannot Be Blank</errorMessage>
</ValidationRule>