force-app/main/default/objects/Program_Outreach__c/validationRules/Phone_Cannot_Be_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Cannot_Be_Blank</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISNULL(Phone__c),ISBLANK(Phone__c))</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>Phone Cannot Be Blank</errorMessage>
</ValidationRule>